Finalisation temporaire de l'html + qq modif sur le css 🚧

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
 			</div>
 		</div>
 		
+		<!---Séparator-->
+		<div class="separator">
+
 		<!---Qui-suis-je-->
 		<div class="QSJ">
 			<p id="QSJTitle">Qui suis-je ?</p>
@@ -84,9 +87,64 @@
 			</div>
 			<div class="secondP">
 				<p>Lorem ipsum dolor sit amet</p>
-				<img id="creation" alt="illustration creation" src="data/img/creation.png">
+				<img id="creation" alt="illustration creation" src="data/img/formation.png">
 			</div>	
 		</div>
+
+
+		<!---Séparator-->
+		<div class="separator">
+
+
+		<!---Projets-->
+		<div class="Projets">
+			<p id="projetsTitle">Projets</p>
+			<div class="firstrow">
+				<div class="card1">
+
+				</div>
+				<div class="card2">
+
+				</div>
+				<div class="card3">
+
+				</div>
+			</div>
+			<div class="secondrow">
+				<div class="card4">
+
+				</div>
+				<div class="card5">
+
+				</div>
+				<div class="card6">
+
+				</div>
+		</div>
+
+
+		<!---Séparator-->
+		<div class="separator">
+
+
+		
+		<!---Contact-->
+		<div class="Contact">
+			<p id="contactTitle">Contact</p>
+			<div class="mail">
+					<img id="mail" alt="mail logo" src="data/vector/mail.svg">
+					<p>contact@cenacrew.com</p>
+			</div>
+
+			<div class="linkedincontact">
+					<img id="linkedincontact" alt="linkedin logo" src="data/vector/linkedin.svg">
+			</div>
+
+			<div class="phone">
+					<img id="phone" alt="phone logo" src="data/vector/phone.svg">
+					<p>0783381438</p>
+			</div>
+
 
 
 	</div>
