--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
 		<div class="accueil">
 		
 			<!---Menu-->
-			<div class="navv">
-				<input type="button" value="Accueil" onClick="document.getElementById('accueil').scrollIntoView();" />
-				<input type="button" value="Projets" onClick="document.getElementById('projets').scrollIntoView();" />
-				<input type="button" value="Qui-suis-je" onClick="document.getElementById('QSJ').scrollIntoView();" />
-				<input type="button" value="Contact" onClick="document.getElementById('contact').scrollIntoView();" />
-			</div>
+			<nav>
+				<a href="#acceuil">Accueil</a>
+				<a href="#QSJ">Qui-suis-je</a>
+				<a href="#projets">Projets</a>
+				<a href="#contact">Contact</a>
+			</nav>
 		
-		
-		
-		
+			
 			<!---Features-->
 			<div class="features">
 				<img id="uk" alt="UK Flag" src="data/img/uk.png">
@@ -79,7 +77,7 @@
 		<div class="separator">
 
 		<!---Qui-suis-je-->
-		<div class="QSJ">
+		<div class="QSJ" id="QSJ">
 			<p id="QSJTitle">Qui suis-je ?</p>
 			<div class="firstP">			
 				<img id="creation" alt="illustration creation" src="data/img/creation.png">
@@ -97,7 +95,7 @@
 
 
 		<!---Projets-->
-		<div class="Projets">
+		<div class="Projets" id="projets">
 			<p id="projetsTitle">Projets</p>
 			<div class="firstrow">
 				<div class="card1">
