Anchor fonctionelle, ajout des paragraphes QSJ + css 🚧

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
     <div class="content">
 		<!---Accueil-->
-		<div class="accueil">
+		<div id="accueil">
 		
 			<!---Menu-->
-			<nav>
-				<a href="#acceuil">Accueil</a>
+			<div class="navv">
+				<a href="#accueil">Accueil</a>
 				<a href="#QSJ">Qui-suis-je</a>
 				<a href="#projets">Projets</a>
 				<a href="#contact">Contact</a>
-			</nav>
+			</div>
 		
-			
+
 			<!---Features-->
 			<div class="features">
 				<img id="uk" alt="UK Flag" src="data/img/uk.png">
@@ -77,14 +77,25 @@
 		<div class="separator">
 
 		<!---Qui-suis-je-->
-		<div class="QSJ" id="QSJ">
+		<div id="QSJ">
 			<p id="QSJTitle">Qui suis-je ?</p>
 			<div class="firstP">			
 				<img id="creation" alt="illustration creation" src="data/img/creation.png">
-				<p>Lorem ipsum dolor sit amet</p>
+				<p>Je suis quelqu'un de passionné et créatif qui s'intéresse énormément à l'art numérique
+					dans sa globalité. Le branding, donc tout ce qui est la création de logo, de DA etc
+					ainsi que l'UI design sont des choses que j'aime beaucoup aussi. Cela m'a amené à
+					maitrisé des logiciels tels que Photoshop, Lightroom ou Figma. Ces passions et ses
+					logiciels sont des choses qui m'aident et m'accompagnent dans mes créations informatiques
+					qui est ma principale passion avec tout ce qu'il le concerne de près ou de loin.</p>
 			</div>
+			<br>
 			<div class="secondP">
-				<p>Lorem ipsum dolor sit amet</p>
+				<p>Au niveau de ma formation, je suis actuellement en deuxième année à l'IUT de bordeaux.
+					Je suis une formation en 3 ans et recherche actuellement un stage pour me forger une
+					vraie expérience professionnelle et surtout de voir comment elle gravite avec l'informatique
+					en son centre. C'est sans doute dans ce but-là que vous lisez ces lignes donc merci d'être
+					aller jusqu'ici et espère que mon portfolio vous plait. Avant cela, j'ai effectué un bac
+					STI2D au Lycée Albert Claveille a Périgueux (24) que j'ai décroché avec la mention très bien.</p>
 				<img id="creation" alt="illustration creation" src="data/img/formation.png">
 			</div>	
 		</div>
@@ -95,7 +106,7 @@
 
 
 		<!---Projets-->
-		<div class="Projets" id="projets">
+		<div id="projets">
 			<p id="projetsTitle">Projets</p>
 			<div class="firstrow">
 				<div class="card1">
@@ -127,7 +138,7 @@
 
 		
 		<!---Contact-->
-		<div class="Contact">
+		<div id="contact">
 			<p id="contactTitle">Contact</p>
 			<div class="mail">
 					<img id="mail" alt="mail logo" src="data/vector/mail.svg">
