--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 		
 			<!---Menu-->
 			<div class="navv">
-				<a href="#accueil">Accueil</a>
-				<a href="#QSJ">Qui-suis-je</a>
-				<a href="#projets">Projets</a>
-				<a href="#contact">Contact</a>
+				<ul>
+					<li><a href="#accueil">Accueil</a></li>
+					<div>
+						<li><a href="#QSJ">Qui-suis-je</a></li>
+						<li><a href="#projets">Projets</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</div>
+				</ul>
 			</div>
 		
+			
 
 			<!---Features-->
 			<div class="features">
