changement sur les features 🚧

--- a/index.html
+++ b/index.html
@@ -33,17 +33,20 @@
 			<!---Features-->
 			<div class="features">
 				<img id="uk" alt="UK Flag" src="data/img/uk.png">
-				<p id="colors">new</p>
-				<img id="palette" alt="color palette" src="data/vector/palette.svg">
-		
+				<div class="colors">
+					<p>new</p>
+					<img id="palette" alt="color palette" src="data/vector/palette.svg">
+				</div>
+				
 				<!---DarkMode-->
-				<label class="switch switch--off">
-					<input type="checkbox" class="switch__input" />
-		
-					<!-- Circle -->
-					<div class="switch__circle"></div>
-				</label>
-				<img id="moon" alt="moon" src="data/vector/moon.svg">
+				<div class="darkmode">
+					<label class="switch">
+						<input type="checkbox">
+						<span class="slider round"></span>
+					  </label>
+					</label>
+					<img id="moon" alt="moon" src="data/vector/moon.svg">
+				</div>			
 			</div>
 		
 		
