--- a/index.html
+++ b/index.html
@@ -33,51 +33,58 @@
 			<!---Features-->
 			<div class="features">
 				<img id="uk" alt="UK Flag" src="data/img/uk.png">
-				<div class="colors">
-					<p>new</p>
-					<img id="palette" alt="color palette" src="data/vector/palette.svg">
-				</div>
-				
-				<!---DarkMode-->
-				<div class="darkmode">
-					<label class="switch">
-						<input type="checkbox">
-						<span class="slider round"></span>
-					  </label>
-					</label>
-					<img id="moon" alt="moon" src="data/vector/moon.svg">
-				</div>			
+				<div class="settings">
+					<div class="colors">
+						<p class="s-button">new</p>
+						<img id="palette" alt="color palette" src="data/vector/palette.svg">
+					</div>
+					
+					<!---DarkMode-->
+					<div class="darkmode">
+						<label class="switch s-button">
+							<input type="checkbox" onclick="DMFunction()">
+							<span class="slider round"></span>
+						</label>
+						<img id="moon" alt="moon" src="data/vector/moon.svg">
+					</div>		
+				</div>	
 			</div>
 		
+			<script>
+				function DMFunction() {
+				   var element = document.body;
+				   element.classList.toggle("dark-mode");
+				}
+			</script>
 		
-		
-		
-			<!---Profil-->
-			<section id="profil">
-				<p id="bvn">Bienvenue ! 👋</p>
-				<h1>Sourdois Pajot Valentin</h1>
-				<p>Développeur Full-Stack</p>
-				<img id="github" alt="github logo" src="data/vector/github.svg">
-				<img id="linkedin" alt="linkedin logo" src="data/vector/linkedin.svg">
-			</section>
-		
-		
-		
-			<!---Cercle centrale-->
-			<div class="carousel">
-				<div class="mid">
-					<img id="photo" alt="ma photo" src="data/img/pp.png">
+			<div class="center">
+				<!---Profil-->
+				<section id="profil">
+					<p id="bvn">Bienvenue ! 👋</p>
+					<h1 class="text">Sourdois Pajot Valentin</h1>
+					<p class="text">Développeur Full-Stack</p>
+					<img id="github" alt="github logo" src="data/vector/github.svg">
+					<img id="linkedin" alt="linkedin logo" src="data/vector/linkedin.svg">
+				</section>
+			
+			
+			
+				<!---Cercle centrale-->
+				<div class="carousel">
+					<div class="mid">
+						<img id="photo" alt="ma photo" src="data/img/pp.png">
+					</div>
+					<div class="skill-icons">
+			
+					</div>
 				</div>
-				<div class="skill-icons">
-		
+			
+				<!---CV-->
+				<div class="cv">
+					<p class="text">Télécharger mon CV</p>
+					<img id="download" alt="logo download" src="data/vector/download.svg">
+			
 				</div>
-			</div>
-		
-			<!---CV-->
-			<div class="cv">
-				<p>Télécharger mon CV</p>
-				<img id="download" alt="logo download" src="data/vector/download.svg">
-		
 			</div>
 		</div>
 		
@@ -86,10 +93,10 @@
 
 		<!---Qui-suis-je-->
 		<div id="QSJ">
-			<p id="QSJTitle">Qui suis-je ?</p>
+			<p id="QSJTitle" class="text">Qui suis-je ?</p>
 			<div class="firstP">			
 				<img id="creation" alt="illustration creation" src="data/img/creation.png">
-				<p>Je suis quelqu'un de passionné et créatif qui s'intéresse énormément à l'art numérique
+				<p class="text">Je suis quelqu'un de passionné et créatif qui s'intéresse énormément à l'art numérique
 					dans sa globalité. Le branding, donc tout ce qui est la création de logo, de DA etc
 					ainsi que l'UI design sont des choses que j'aime beaucoup aussi. Cela m'a amené à
 					maitrisé des logiciels tels que Photoshop, Lightroom ou Figma. Ces passions et ses
@@ -98,7 +105,7 @@
 			</div>
 			<br>
 			<div class="secondP">
-				<p>Au niveau de ma formation, je suis actuellement en deuxième année à l'IUT de bordeaux.
+				<p class="text">Au niveau de ma formation, je suis actuellement en deuxième année à l'IUT de bordeaux.
 					Je suis une formation en 3 ans et recherche actuellement un stage pour me forger une
 					vraie expérience professionnelle et surtout de voir comment elle gravite avec l'informatique
 					en son centre. C'est sans doute dans ce but-là que vous lisez ces lignes donc merci d'être
@@ -115,7 +122,7 @@
 
 		<!---Projets-->
 		<div id="projets">
-			<p id="projetsTitle">Projets</p>
+			<p id="projetsTitle" class="text">Projets</p>
 			<div class="firstrow">
 				<div class="card1">
 
@@ -147,10 +154,10 @@
 		
 		<!---Contact-->
 		<div id="contact">
-			<p id="contactTitle">Contact</p>
+			<p id="contactTitle" class="text">Contact</p>
 			<div class="mail">
 					<img id="mail" alt="mail logo" src="data/vector/mail.svg">
-					<p>contact@cenacrew.com</p>
+					<p class="text">contact@cenacrew.com</p>
 			</div>
 
 			<div class="linkedincontact">
@@ -159,7 +166,7 @@
 
 			<div class="phone">
 					<img id="phone" alt="phone logo" src="data/vector/phone.svg">
-					<p>0783381438</p>
+					<p class="text">0783381438</p>
 			</div>
 
 
@@ -168,7 +175,7 @@
 	<!---Footer-->
 	<footer class="main-footer">
 		<div class="footer-wrapper">
-			<p> © 2022 cenacrew.com</p>
+			<p class="text"> © 2022 cenacrew.com</p>
 		</div>
 	</footer>
 
