fix des appels aux images apres renommage 🐛

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width">
     <title>Portfolio</title>
     <meta name="description" content="">
-	<link rel="icon" href="./data/img/pp.ico">
+	<link rel="icon" href="./files/img/pp.ico">
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" />
@@ -32,11 +32,11 @@
 
 			<!---Features-->
 			<div class="features">
-				<img id="uk" alt="UK Flag" src="./data/img/uk.png">
+				<img id="uk" alt="UK Flag" src="./files/img/uk.png">
 				<div class="settings">
 					<div class="colors">
 						<p class="s-button s">new</p>
-						<img id="palette" alt="color palette" src="./data/vector/palette.svg">
+						<img id="palette" alt="color palette" src="./files/vector/palette.svg">
 					</div>
 					
 					<!---DarkMode-->
@@ -45,7 +45,7 @@
 							<input type="checkbox" onclick="DMFunction()">
 							<span class="slider round"></span>
 						</label>
-						<img id="moon" alt="moon" src="./data/vector/moon.svg">
+						<img id="moon" alt="moon" src="./files/vector/moon.svg">
 					</div>		
 				</div>	
 			</div>
@@ -63,8 +63,8 @@
 					<p id="bvn" class="m">Bienvenue ! 👋</p>
 					<h1 class="text xl">Sourdois Pajot Valentin</h1>
 					<p class="text m">Développeur Full-Stack</p>
-					<img id="github" alt="github logo" src="./data/vector/github.svg">
-					<img id="linkedin" alt="linkedin logo" src="./data/vector/linkedin.svg">
+					<img id="github" alt="github logo" src="./files/vector/github.svg">
+					<img id="linkedin" alt="linkedin logo" src="./files/vector/linkedin.svg">
 				</section>
 			
 			
@@ -72,7 +72,7 @@
 				<!---Cercle centrale-->
 				<div class="carousel">
 					<div class="mid">
-						<img id="photo" alt="ma photo" src="./data/img/pp.png">
+						<img id="photo" alt="ma photo" src="./files/img/pp.png">
 					</div>
 					<div class="skill-icons">
 			
@@ -82,7 +82,7 @@
 				<!---CV-->
 				<div class="cv">
 					<p class="text m">Télécharger mon CV</p>
-					<img id="download" alt="logo download" src="./data/vector/download.svg">
+					<img id="download" alt="logo download" src="./files/vector/download.svg">
 			
 				</div>
 			</div>
@@ -95,7 +95,7 @@
 		<div id="QSJ">
 			<p id="QSJTitle" class="title text l">Qui suis-je ?</p>
 			<div class="QSJContent">		
-				<img id="creation" alt="illustration creation" src="./data/img/creation.png">
+				<img id="creation" alt="illustration creation" src="./files/img/creation.png">
 				<p id="firstP" class="text m para">Je suis quelqu'un de passionné et créatif qui s'intéresse énormément à l'art numérique
 					dans sa globalité. Le branding, donc tout ce qui est la création de logo, de DA etc
 					ainsi que l'UI design sont des choses que j'aime beaucoup aussi. Cela m'a amené à
@@ -109,7 +109,7 @@
 					en son centre. C'est sans doute dans ce but-là que vous lisez ces lignes donc merci d'être
 					aller jusqu'ici et espère que mon portfolio vous plait. Avant cela, j'ai effectué un bac
 					STI2D au Lycée Albert Claveille a Périgueux (24) que j'ai décroché avec la mention très bien.</p>
-				<img id="formation" alt="illustration formation" src="./data/img/formation.png">
+				<img id="formation" alt="illustration formation" src="./files/img/formation.png">
 			</div>				
 		</div>
 
@@ -151,16 +151,16 @@
 		<div id="contact">
 			<p id="contactTitle" class="title text l">Contact</p>
 			<div class="mail">
-					<img id="mail" alt="mail logo" src="./data/vector/mail.svg">
+					<img id="mail" alt="mail logo" src="./files/vector/mail.svg">
 					<p class="text m">contact@cenacrew.com</p>
 			</div>
 
 			<div class="linkedincontact">
-					<img id="linkedincontact" alt="linkedin logo" src="./data/vector/linkedin.svg">
+					<img id="linkedincontact" alt="linkedin logo" src="./files/vector/linkedin.svg">
 			</div>
 
 			<div class="phone">
-					<img id="phone" alt="phone logo" src="./data/vector/phone.svg">
+					<img id="phone" alt="phone logo" src="./files/vector/phone.svg">
 					<p class="text m">0783381438</p>
 			</div>
 	</div>
