svg are now clickable ✨

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
 					<p id="bvn" class="m">Bienvenue ! 👋</p>
 					<h1 class="text xl">Sourdois Pajot Valentin</h1>
 					<p class="text m">Développeur Full-Stack</p>
-					<svg width="45px" viewBox="0 0 27 27">
+					<a href="https://github.com/cenacrew" target="_blank"><svg width="45px" viewBox="0 0 27 27">
 						<path id="github" class="svg" d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-					</svg>
-					<svg width="50px" viewBox="0 0 30 30">
+					</svg></a>
+					<a href="https://www.linkedin.com/in/valentin-sourdois-pajot/" target="_blank"><svg width="50px" viewBox="0 0 30 30">
 						<path class="svg linkedin" d="M15,3C8.373,3,3,8.373,3,15c0,6.627,5.373,12,12,12s12-5.373,12-12C27,8.373,21.627,3,15,3z M10.496,8.403c0.842,0,1.403,0.561,1.403,1.309c0,0.748-0.561,1.309-1.496,1.309C9.561,11.022,9,10.46,9,9.712C9,8.964,9.561,8.403,10.496,8.403z M12,20H9v-8h3V20z M22,20h-2.824v-4.372c0-1.209-0.753-1.488-1.035-1.488s-1.224,0.186-1.224,1.488c0,0.186,0,4.372,0,4.372H14v-8h2.918v1.116C17.294,12.465,18.047,12,19.459,12C20.871,12,22,13.116,22,15.628V20z"/>
-					</svg>
+					</svg></a>
 				</section>
 			
 			
@@ -133,9 +133,9 @@
 				<!---CV-->
 				<div class="cv">
 					<p class="text m">Télécharger mon CV</p>
-					<svg width="100px" viewBox="0 0 1000 1000" xml:space="preserve">
+					<a href="./files/pdf/CV.pdf" target="_blank"><svg width="100px" viewBox="0 0 1000 1000" xml:space="preserve">
 						<path path id="dl" class="svg" d="M924.3,700.4v222.3c0,37.3-30.2,67.4-67.4,67.4H143c-37.2,0-67.4-30.1-67.4-67.4V700.4c0-37.2,30.2-67.4,67.4-67.4c37.2,0,67.4,30.2,67.4,67.4v154.9h579.2V700.4c0-37.2,30.2-67.4,67.4-67.4C894.2,633,924.3,663.2,924.3,700.4z M452.4,758.1c13.2,13.2,30.4,19.7,47.6,19.7c17.3,0,34.5-6.6,47.7-19.7l202-202c26.4-26.3,26.4-68.9,0-95.2c-26.3-26.3-69-26.3-95.2,0l-87,87.1V77.4c0-37.2-30.1-67.4-67.4-67.4c-37.2,0-67.4,30.2-67.4,67.4v470.6l-87.1-87.1c-26.3-26.3-69-26.3-95.2,0c-26.3,26.3-26.3,69,0,95.2L452.4,758.1z"/>
-					</svg>
+					</svg></a>
 			
 				</div>
 			</div>
@@ -204,22 +204,22 @@
 		<div id="contact">
 			<p id="contactTitle" class="title text l">Contact</p>
 			<div class="mail">
-				<svg viewBox="0 0 24 24" width="65px">
+				<a href="mailto:contact@cenacrew.com"><svg viewBox="0 0 24 24" width="65px">
 					<path id="mail" class="svg" d="M20,3H4C1.8,3,0,4.8,0,7v10c0,2.2,1.8,4,4,4h16c2.2,0,4-1.8,4-4V7C24,4.8,22.2,3,20,3z M21.6,8.8l-7.9,5.3   c-0.5,0.3-1.1,0.5-1.7,0.5s-1.2-0.2-1.7-0.5L2.4,8.8C2,8.5,1.9,7.9,2.2,7.4C2.5,7,3.1,6.9,3.6,7.2l7.9,5.3c0.3,0.2,0.8,0.2,1.1,0   l7.9-5.3c0.5-0.3,1.1-0.2,1.4,0.3C22.1,7.9,22,8.5,21.6,8.8z"/>
-				</svg>
+				</svg></a>
 				<p class="text m">contact@cenacrew.com</p>
 			</div>
 
 			<div class="linkedincontact">
-				<svg width="75px" viewBox="0 0 30 30">
+				<a href="https://www.linkedin.com/in/valentin-sourdois-pajot/" target="_blank"><svg width="75px" viewBox="0 0 30 30">
 					<path class="svg linkedin" d="M15,3C8.373,3,3,8.373,3,15c0,6.627,5.373,12,12,12s12-5.373,12-12C27,8.373,21.627,3,15,3z M10.496,8.403c0.842,0,1.403,0.561,1.403,1.309c0,0.748-0.561,1.309-1.496,1.309C9.561,11.022,9,10.46,9,9.712C9,8.964,9.561,8.403,10.496,8.403z M12,20H9v-8h3V20z M22,20h-2.824v-4.372c0-1.209-0.753-1.488-1.035-1.488s-1.224,0.186-1.224,1.488c0,0.186,0,4.372,0,4.372H14v-8h2.918v1.116C17.294,12.465,18.047,12,19.459,12C20.871,12,22,13.116,22,15.628V20z"/>
-				</svg>
+				</svg></a>
 			</div>
 
 			<div class="phone">
-				<svg viewBox="0 0 256 256" width="75px">
+				<a href="tel:+33783381438"><svg viewBox="0 0 256 256" width="75px">
 					<path id="phone" class="svg" d="M222,158.4l-46.9-20a15.6,15.6,0,0,0-15.1,1.3l-25.1,16.7a76.5,76.5,0,0,1-35.2-35h0L116.3,96a15.9,15.9,0,0,0,1.4-15.1L97.6,34a16.3,16.3,0,0,0-16.7-9.6A56.2,56.2,0,0,0,32,80c0,79.4,64.6,144,144,144a56.2,56.2,0,0,0,55.6-48.9A16.3,16.3,0,0,0,222,158.4Z"/>
-				</svg>
+				</svg></a>
 				<p class="text m">0783381438</p>
 			</div>
 	</div>
