--- a/index.html
+++ b/index.html
@@ -203,30 +203,36 @@
 		<!---Contact-->
 		<div id="contact">
 			<p id="contactTitle" class="title text l">Contact</p>
-			<div class="mail">
-				<a href="mailto:contact@cenacrew.com"><svg viewBox="0 0 24 24" width="65px">
-					<path id="mail" class="svg" d="M20,3H4C1.8,3,0,4.8,0,7v10c0,2.2,1.8,4,4,4h16c2.2,0,4-1.8,4-4V7C24,4.8,22.2,3,20,3z M21.6,8.8l-7.9,5.3   c-0.5,0.3-1.1,0.5-1.7,0.5s-1.2-0.2-1.7-0.5L2.4,8.8C2,8.5,1.9,7.9,2.2,7.4C2.5,7,3.1,6.9,3.6,7.2l7.9,5.3c0.3,0.2,0.8,0.2,1.1,0   l7.9-5.3c0.5-0.3,1.1-0.2,1.4,0.3C22.1,7.9,22,8.5,21.6,8.8z"/>
-				</svg></a>
-				<p class="text m">contact@cenacrew.com</p>
-			</div>
+			<div class="contactInfo">
+				<div class="mail">
+					<div class="mail1">
+						<a href="mailto:contact@cenacrew.com"><svg viewBox="0 0 24 24" width="65px">
+							<path id="mail" class="svg" d="M20,3H4C1.8,3,0,4.8,0,7v10c0,2.2,1.8,4,4,4h16c2.2,0,4-1.8,4-4V7C24,4.8,22.2,3,20,3z M21.6,8.8l-7.9,5.3   c-0.5,0.3-1.1,0.5-1.7,0.5s-1.2-0.2-1.7-0.5L2.4,8.8C2,8.5,1.9,7.9,2.2,7.4C2.5,7,3.1,6.9,3.6,7.2l7.9,5.3c0.3,0.2,0.8,0.2,1.1,0   l7.9-5.3c0.5-0.3,1.1-0.2,1.4,0.3C22.1,7.9,22,8.5,21.6,8.8z"/>
+						</svg></a>
+					</div>
+					<p class="text m mail2">contact@cenacrew.com</p>
+				</div>
 
-			<div class="linkedincontact">
-				<a href="https://www.linkedin.com/in/valentin-sourdois-pajot/" target="_blank"><svg width="75px" viewBox="0 0 30 30">
-					<path class="svg linkedin" d="M15,3C8.373,3,3,8.373,3,15c0,6.627,5.373,12,12,12s12-5.373,12-12C27,8.373,21.627,3,15,3z M10.496,8.403c0.842,0,1.403,0.561,1.403,1.309c0,0.748-0.561,1.309-1.496,1.309C9.561,11.022,9,10.46,9,9.712C9,8.964,9.561,8.403,10.496,8.403z M12,20H9v-8h3V20z M22,20h-2.824v-4.372c0-1.209-0.753-1.488-1.035-1.488s-1.224,0.186-1.224,1.488c0,0.186,0,4.372,0,4.372H14v-8h2.918v1.116C17.294,12.465,18.047,12,19.459,12C20.871,12,22,13.116,22,15.628V20z"/>
-				</svg></a>
-			</div>
+				<div class="linkedincontact">
+					<a href="https://www.linkedin.com/in/valentin-sourdois-pajot/" target="_blank" class="l1"><svg width="75px" viewBox="0 0 30 30">
+						<path class="svg linkedin" d="M15,3C8.373,3,3,8.373,3,15c0,6.627,5.373,12,12,12s12-5.373,12-12C27,8.373,21.627,3,15,3z M10.496,8.403c0.842,0,1.403,0.561,1.403,1.309c0,0.748-0.561,1.309-1.496,1.309C9.561,11.022,9,10.46,9,9.712C9,8.964,9.561,8.403,10.496,8.403z M12,20H9v-8h3V20z M22,20h-2.824v-4.372c0-1.209-0.753-1.488-1.035-1.488s-1.224,0.186-1.224,1.488c0,0.186,0,4.372,0,4.372H14v-8h2.918v1.116C17.294,12.465,18.047,12,19.459,12C20.871,12,22,13.116,22,15.628V20z"/>
+					</svg></a>
+				</div>
 
-			<div class="phone">
-				<a href="tel:+33783381438"><svg viewBox="0 0 256 256" width="75px">
-					<path id="phone" class="svg" d="M222,158.4l-46.9-20a15.6,15.6,0,0,0-15.1,1.3l-25.1,16.7a76.5,76.5,0,0,1-35.2-35h0L116.3,96a15.9,15.9,0,0,0,1.4-15.1L97.6,34a16.3,16.3,0,0,0-16.7-9.6A56.2,56.2,0,0,0,32,80c0,79.4,64.6,144,144,144a56.2,56.2,0,0,0,55.6-48.9A16.3,16.3,0,0,0,222,158.4Z"/>
-				</svg></a>
-				<p class="text m">0783381438</p>
+				<div class="phone">
+					<div class="tel1">
+						<a href="tel:+33783381438"><svg viewBox="0 0 256 256" width="75px">
+							<path id="phone" class="svg" d="M222,158.4l-46.9-20a15.6,15.6,0,0,0-15.1,1.3l-25.1,16.7a76.5,76.5,0,0,1-35.2-35h0L116.3,96a15.9,15.9,0,0,0,1.4-15.1L97.6,34a16.3,16.3,0,0,0-16.7-9.6A56.2,56.2,0,0,0,32,80c0,79.4,64.6,144,144,144a56.2,56.2,0,0,0,55.6-48.9A16.3,16.3,0,0,0,222,158.4Z"/>
+						</svg></a>
+					</div>
+					<p class="text m tel2" >0783381438</p>
+				</div>
 			</div>
 	</div>
 	<!---Footer-->
 	<footer class="main-footer">
 		<div class="footer-wrapper">
-			<p class="text m"> © 2022 cenacrew.com</p>
+			<p class="text m copyright"> © 2022 cenacrew.com</p>
 		</div>
 	</footer>
 
